styles.css
@font-face {
  font-family: "IBM";
  src: url("Ac437_IBM_VGA_8x16.ttf");
}
html {
  height: 100%;
  color: grey;
}
p.caption > strong {
  color: white !important;
}

body {
  background-color: #000000;
  position: relative;
  min-height: 100vh;
  padding: 0;
  margin: 0;
}

html {
  font-family: "IBM";
  font-size: 15pt;
}

main {
  padding: 0 20px 40px 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

a:link {
  color: darkcyan;
  text-decoration: solid;
}

.video {
  margin-top: -50px;
}

a:visited {
  color: darkcyan;
}

a:active {
  color: yellow;
}

a:hover {
  color: yellow;
  text-decoration: none;
}
input:focus {
  border: 1px solid #aaa;
}

p,
h1,
.titles {
  margin-bottom: 0;
  font-family: "IBM";
  color: grey;
}

.page-title {
  font-size: 40px;
}
/* CSS for navigation bar */

.navbar {
  top: 0;
  width: 100%;
  height: 7%;
  z-index: 10;

  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;

  color: darkred;
  padding: 0px 0px;
  /* Debug border */
  /* border: solid red; */
}

.nav-list {
  display: flex;
  flex-direction: row;
  position: relative;
  right: 30px;
  list-style: none;
}

.navbar a {
  color: white;
  margin: 0 10px;
  text-decoration: none;
  font-family: "IBM";
}
.navbar a:hover {
  color: cyan;
  text-decoration: none;
}
.logo a {
  font-family: "IBM";
  letter-spacing: -1px;
  position: relative;
  font-size: larger;
}

.navbar .logo {
  margin-top: -5px;
  margin-bottom: 25px;
}

.resume {
  margin: 20px;
  padding: 20px;
  background-color: rgb(40, 40, 40);
}

h2 {
  color: rgb(191, 105, 0);
}
h2:after {
  content: " ";
  display: block;
  border: 2px solid darkred;
}

/* CSS for page footer */

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  color: dargrey;
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
}

.footer img {
  padding: 5px;
  width: 35px;
  height: auto;
}

.about {
  margin: 10px;
  padding: 1px;
  display: flex;
  border: 1px solid #aad;
  border-width: 1px;
  border-color: #aad;
  background-color: #000000;
  width: 40%;
}

.about h2 {
  font-family: "IBM";
  background-color: #000000;
  font-size: large;
  margin: 0;
}

.about h2:after {
  content: " ";
  display: none;
}

.about-image {
  align-self: center;
}

.section-title {
  color: #ccc;
}

.entry-title {
  color: rgb(191, 105, 0);
}
.about-image img {
  border: 1px solid #000000;
  border-radius: 12px;
  border-width: 1px;
  border-color: rgb(0, 0, 0);
  width: 250px;
  height: auto;
  padding: 0px;
}

.about-text {
  padding-left: 10px;
  padding-right: 0px;
  text-align: left;
  font-size: 15px;
  width: 50%;
}

.container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 20px;
}

.year {
  padding: 10px;
  padding-top: 0;
  background-color: #000000;
}

.year img {
  float: right;
  width: 50px;
  position: relative;
  height: auto;
  top: -15px;
}
.year h2:after {
  margin-top: 0;

  display: block;
  font-size: small;
}
.expandable {
  display: none; /* Hide the lists by default */
}
#passwordModal {
  display: none; /* Hidden by default */
  position: fixed;
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 80%; /* Could be more or less, depending on screen size */
}
.arrow {
  display: inline-block;
  transition: transform 0.3s ease;
  margin-right: 5px;
}
.arrow.rotate {
  transform: rotate(90deg);
}

.clickable {
  cursor: pointer;
}

.clickable:hover {
  color: cyan;
}

.toggle-header {
  cursor: pointer; /* Change the cursor to indicate it's clickable */
}

.toggle-header:hover {
  color: cyan;
}

.expandable.active {
  display: block;
}
.new-stuff {
  margin-top: 40px;
  text-align: center;
}

.new-stuff h2 {
  font-size: 2rem;
  margin-bottom: 20px;
}

.new-item {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  padding: 10px;
}

.new-item-gif img {
  border-radius: 8px;
  margin-right: 20px;
}

.new-item-description {
  max-width: 500px;
  text-align: left;
  padding-right: 10px;
}

.date-log {
  margin-top: 10px;
  font-style: italic;
  color: #555;
}

strong {
  color: #ccc;
}
hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid darkred;
  margin: 1em 0;
  padding: 0;
}

.content-container {
  display: block;
  height: auto;
  margin-top: 20px;
  padding: 20px;
  border-style: solid;
  border-color: rgb(0, 0, 0);
  border-width: 1px;
  background-color: #000000;
  margin-left: auto;
  margin-right: auto;
  width: 960px;
}

.home-box {
  margin: 10px;

  width: auto;
  background-color: #000000;
}
@media (max-width: 900px) {
  .content-container {
    margin: 20px 20px; /* Adjust margins for smaller screens */
    max-width: none; /* Let it use available space */
  }
}

.home-box h2 {
  font-family: "IBM";
  background-color: #000000;
  font-size: larger;
  margin: 0;
}

.home-box h2:after {
  content: " ";
  display: none;
}

ul li p {
  margin: 0px 0 5px;
  font-size: 0.9rem; /* Smaller font size */
  color: #555; /* Muted color */
  line-height: 1.4; /* Improve readability */
}

p {
  text-align: justify;
  display: block;
  margin-block-start: 10px;
  margin-block-end: 5px;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  unicode-bidi: isolate;
}

